--- a/peerinst/templates/registration/landing_page.html
+++ b/peerinst/templates/registration/landing_page.html
@@ -997,16 +997,16 @@ function timeline() {
         "shortDesc" : "Initial co-design development",
         "note" : "Teachers worked with researchers to design the tool" },
       { "year" : "2015",
-        "shortDesc" : "Publication",
+        "shortDesc" : "ARC Conference",
         "note" : "<a href='https://dspacecdc-test.inlibro.net/xmlui/bitstream/handle/11515/34789/CHARLES-E-et-coll_2015_Affiche.pdf?sequence=1&isAllowed=y'>The benefits of DALITE</a>" },
       { "year" : "2015.33",
-        "shortDesc" : "Publication",
+        "shortDesc" : "8th International Conference on Educational Data Mining",
         "note" : "<a href='https://files.eric.ed.gov/fulltext/ED560883.pdf'>The power of DALITE</a>" },
       { "year" : "2015.67",
-        "shortDesc" : "Publication",
+        "shortDesc" : "CSCL 2015 Conference",
         "note" : "<a href='https://www.isls.org/cscl2015/papers/MC-0280-FullPaper-Charles.pdf'>Uptake of new tools</a>"},
       { "year" : "2016",
-        "shortDesc" : "Publication",
+        "shortDesc" : "EC-TEL 2016 Conference",
         "note" : "<a href='http://www.professeurs.polymtl.ca/michel.desmarais/Publications-Michel/EC-TEL_2016_paper_201.pdf'>Extending peer instruction</a>"},
       { "year" : "2018.0",
         "shortDesc" : "Modern web app",
